--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "acorn-hammerhead": "^0.5.0",
+    "body-parser": "^1.20.1",
     "css-tree": "^2.1.0",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "parse5": "^6.0.1",
     "webpack": "^5.70.0"
   }
